[package]
name = "overhaul"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configparser = "3.0.0"
reqwest = "0.11.10"
text_io = "0.1.10"
colored = "2"

# `cargo test --features dumb_terminal`
[features]
dumb_terminal = ["colored/no-color"]