[package]
name = "overhaul"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configparser = "3.0.0"
text_io = "0.1.10"
colored = "2"
reqwest = { version = "0.11", features = ["blocking"] }
futures = "0.3"
tokio = { version = "1.12.0", features = ["full"] }
dirs = "4.0.0"

# `cargo test --features dumb_terminal`
[features]
dumb_terminal = ["colored/no-color"]
